chore: config jest

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "jsx": "react-jsx",
 
     /* Linting */
+    "esModuleInterop": true,
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
