chore: implement app config

--- a/jest.config.json
+++ b/jest.config.json
@@ -1,5 +1,5 @@
 {
-  "roots": ["<rootDir>/src"],
+  "roots": ["<rootDir>/tests"],
   "collectCoverageFrom": ["<rootDir>/src/**/*.{ts/tsx}"],
   "coverageDirectory": "coverage",
   "testEnvironment": "node",
