test: ensure jest request is configured correctly

--- a/jest.config.json
+++ b/jest.config.json
@@ -1,6 +1,6 @@
 {
   "roots": ["<rootDir>/tests"],
-  "collectCoverageFrom": ["<rootDir>/src/**/*.{ts/tsx}"],
+  "collectCoverageFrom": ["<rootDir>/src/**/*"],
   "coverageDirectory": "coverage",
   "testEnvironment": "node",
   "transform": {
