--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "test-coverage": "jest --passWithNoTests --coverage"
   },
   "dependencies": {
+    "@types/email-validator": "^1.0.6",
     "axios": "^1.5.1",
+    "email-validator": "^2.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
