--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "axios": "^1.5.1",
     "email-validator": "^2.0.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.17.0",
+    "sass": "^1.69.4"
   },
   "devDependencies": {
+    "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.5",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.0.3",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
