chore: add module name wrapper proxy for scss tests

--- a/jest.config.json
+++ b/jest.config.json
@@ -8,5 +8,8 @@
     "^.+\\.(ts|tsx)$": "ts-jest",
     "^.+\\.(js|jsx)$": "babel-jest",
     "^.+\\.(css|scss)$": "jest-transform-css"
+  },
+  "moduleNameMapper": {
+    "\\.(css|scss)$": "identity-obj-proxy"
   }
 }
